Made changes from lecture

--- a/MiniApps/MiniApps.vcxproj.filters
+++ b/MiniApps/MiniApps.vcxproj.filters
@@ -15,12 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MiniApp.cpp">
+    <ClCompile Include="Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MiniApps.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MiniApp.h">
+    <ClInclude Include="MiniApps.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
